...
                },
                shape = AbsoluteRoundedCornerShape(dimensionResource(id = R.dimen.rounded_corner)),
                modifier = Modifier
                    .padding(dimensionResource(id = R.dimen.padding_small))
                    .width(dimensionResource(id = R.dimen.element_xlarge))
                    .height(dimensionResource(id = R.dimen.element_height))
                    .testTag("StartRoundButton")
            ) {
                Text(
                    text = stringResource(R.string.start_round),
                    fontWeight = FontWeight.Bold
                )
            }
...
                },
                shape = AbsoluteRoundedCornerShape(dimensionResource(id = R.dimen.rounded_corner)),
                modifier = Modifier
                    .padding(dimensionResource(id = R.dimen.padding_small))
                    .width(dimensionResource(id = R.dimen.element_xlarge))
                    .height(dimensionResource(id = R.dimen.element_height))
                    .testTag("RandomRoundButton")
            ) {
                Text(
                    text = stringResource(R.string.random_round),
                    fontWeight = FontWeight.Bold
                )
            }
...
