<resources>
    <string name="app_name">TriviaGen</string>
    <string name="quick_game">Quick game</string>
    <string name="exit">Exit</string>
    <string name="options">Options</string>
    <string name="or">or</string>
    <string name="random_round">Random Round</string>
    <string name="start_round">Start Round</string>
    <string name="topic">topic</string>
    <string name="view_answers">View Answers</string>
    <string name="home">Home</string>
    <string name="retry">Retry</string>
    <string name="trivia_topic">Trivia topic</string>
    <string name="dark_theme">Dark theme</string>
    <string name="do_you_really_want_to_leave_a_trivia">Do you really want to leave a trivia?</string>
    <string name="leaving_a_trivia">Leaving a trivia</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_label">Email</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Register</string>
    <string name="submit_label">Submit</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="check_your_e_mail_for_address_verification">Check your e-mail for address verification</string>
    <string name="incorrect_form_of_e_mail">Incorrect form of e-mail</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="e_mail_cannot_be_empty">E-mail cannot be empty</string>
    <string name="password_must_have_at_least_8_characters">Password must have at least 8 characters</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="something_went_wrong_please_try_again_later">Something went wrong. Please try again later</string>
</resources>